crates/oxc_react_compiler/tests/snapshots/new-mutability__repro-function-expression-effects-stack-overflow.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/repro-function-expression-effects-stack-overflow.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		const fn = () => {
			new Object().build(x).build({}).build({}).build({}).build({}).build({}).build({});
		};
		t1 = <Stringify x={x} fn={fn} />;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
