crates/oxc_react_compiler/tests/snapshots/new-mutability__ssa-renaming-ternary-destruction.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/ssa-renaming-ternary-destruction.js
---
// @enablePropagateDepsInHIR @enableNewMutationAliasingModel
function useFoo() {}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		cond: false,
		foo: 2,
		bar: 55
	}],
	sequentialRenders: [
		{
			cond: false,
			foo: 2,
			bar: 55
		},
		{
			cond: false,
			foo: 3,
			bar: 55
		},
		{
			cond: true,
			foo: 3,
			bar: 55
		}
	]
};
