crates/oxc_react_compiler/tests/snapshots/new-mutability__transitive-mutation-before-capturing-value-created-earlier.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/transitive-mutation-before-capturing-value-created-earlier.js
---
import { c as _c } from "react/compiler-runtime";
// @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(5);
	const { a, b } = t0;
	let t1;
	if ($[0] !== a) {
		t1 = [a];
		$[0] = a;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const x = t1;
	let t2;
	if ($[2] !== b || $[3] !== x) {
		const y = { b };
		mutate(y);
		y.x = x;
		t2 = <div>{y}</div>;
		$[2] = b;
		$[3] = x;
		$[4] = t2;
	} else {
		t2 = $[4];
	}
	return t2;
}
